Reescribe criterios de selección #54

--- a/doc/secciones/04_analisis.tex
+++ b/doc/secciones/04_analisis.tex
@@ -233,9 +233,8 @@ Se necesita un gestor de paquetes que:
 \subsubsection{Criterios de selección}
 Entre las opciones que cumplen los requisitos anteriores, se prioriza:
 \begin{itemize}
-    \item Que se alinee con los estándares oficiales de Python.
-    \item Facilidad de instalación y curva de aprendizaje baja.
-    \item Esté bien documentado y cuente con soporte de la comunidad.
+    \item \textbf{Velocidad:} la herramienta debe resolver dependencias y crear o actualizar 
+    entornos de forma rápida, minimizando el tiempo de instalación y configuración.
 \end{itemize}
 
 \subsubsection{Herramientas consideradas}
