--- a/doc/secciones/04_analisis.tex
+++ b/doc/secciones/04_analisis.tex
@@ -229,6 +229,8 @@ Se necesita un gestor de paquetes que:
     \item Sea adecuada para un proyecto pequeño, priorizando simplicidad sobre complejidad 
     innecesaria.
 \end{itemize}
+Estas condiciones limitan las opciones a herramientas modernas que implementen \texttt{pyproject.toml},
+excluyendo herramientas estándares de facto como \texttt{pip} + \texttt{venv} o \texttt{pipenv}.
 
 \subsubsection{Criterios de selección}
 Entre las opciones que cumplen los requisitos anteriores, se prioriza:
@@ -240,15 +242,23 @@ Entre las opciones que cumplen los requisitos anteriores, se prioriza:
 \subsubsection{Herramientas consideradas}
 Se han comparado tres opciones:
 \begin{itemize}
-    \item \textbf{pip + venv}: Herramientas incluidas en Python, permiten gestionar dependencias 
-    con \texttt{requirements.txt}. No implementan directamente \texttt{pyproject.toml}, pero son 
-    estándar de facto y garantizan compatibilidad básica.
-    \item \textbf{pipenv}: Combina la gestión de dependencias y del entorno virtual en un solo
-    comando, empleando un archivo \texttt{Pipfile}. Sin embargo, su adopción ha disminuido frente 
-    a \texttt{pyproject.toml}.
-    \item \textbf{poetry}: Más avanzado, implementa de forma nativa los PEP 508 y 518, gestionando
-    dependencias y entorno con \texttt{pyproject.toml}. Es más completo, aunque introduce mayor 
-    complejidad.
+    \item \textbf{Poetry}: Implementa de forma nativa los PEP 508 y 518, gestionando
+    dependencias y entorno con \texttt{pyproject.toml}. Asegura que las instalaciones sean 
+    reproducibles y ofrece una resolución de dependencias rápida y fiable.
+    \item \textbf{Flit:} Se centra en la distribución de paquetes y su distribución,
+    usa \texttt{pyproject.toml} para definir dependencias y es muy rápido, pero no gestiona entornos 
+    virtuales, ni todas las dependencias del proyecto.
+    \item \textbf{Hatch:} También soporta \texttt{pyproject.toml} y ofrece gestión de entornos
+    y dependencias. Es flexible y potente, pero puede ser lenta en proyectos grandes. 
+    \item \textbf{uv: } Herramienta escrita en \texttt{Rust}, mucho más rápida que las demás.
+    Sin embargo, su adopción es aún limitada y su ecosistema es mucho más reducido que el de
+    \texttt{Poetry}, lo que podría dificultar su integración.
+    \item \textbf{PDM: } Se denomina como una mezcla entre \texttt{pip}, \texttt{poetry} y 
+    \texttt{virtualenv}, pero no es tan popular ni tiene tanta comunidad como \texttt{poetry}.
+    Está basado en \texttt{\href{https://peps.python.org/pep-0582/}{PEP 582}}, que propone una alternativa a los entornos virtuales tradicionales,
+    usando el directorio \texttt{\_\_pypackages\_\_} en lugar de \texttt{venv}. Sin embargo,
+    este PEP no está tan extendido ni es tan compatible con otras herramientas del ecosistema
+    Python como los PEP 508 y 518.
 \end{itemize}
 
 \subsubsection{Herramienta seleccionada}
@@ -256,9 +266,5 @@ Se ha seleccionado \textbf{Poetry} por ajustarse mejor a los estándares actuale
 que utiliza \texttt{pyproject.toml}, definido en el \textit{PEP 518}, de manera nativa para la
 gestión de dependencias y soporta la especificación de versiones y extras según el \textit{PEP 508}.
 
-Frente a \textbf{pip} + \textbf{venv}, Poetry aporta una gestión unificada tanto del entorno virtual 
-como de las dependencias, reduciendo la complejidad de mantener varios ficheros y comandos. 
-En comparación con \textbf{pipenv}, cuenta con mayor adopción y alineación con los estándares oficiales. 
-
-Aunque añade una ligera curva de aprendizaje, su uso asegura que el proyecto sea reproducible, mantenible
-y compatible con las prácticas recomendadas en el ecosistema Python actual.
+Además, Poetry garantiza la idempotencia y reproducibilidad del entorno, ofreciendo el mejor equilibrio
+entre estabilidad, madurez, velocidad y soporte de la comunidad.
