--- a/doc/secciones/04_analisis.tex
+++ b/doc/secciones/04_analisis.tex
@@ -236,34 +236,34 @@ excluyendo herramientas estándares de facto como \texttt{pip} + \texttt{venv} o
 Entre las opciones que cumplen los requisitos anteriores, se prioriza:
 \begin{itemize}
     \item \textbf{Velocidad:} la herramienta debe resolver dependencias y crear o actualizar 
-    entornos de forma rápida, minimizando el tiempo de instalación y configuración.
+    entornos rápidamente, minimizando el tiempo de instalación y configuración.
 \end{itemize}
 
 \subsubsection{Herramientas consideradas}
 Se han comparado tres opciones:
 \begin{itemize}
-    \item \textbf{Poetry}: Implementa de forma nativa los PEP 508 y 518, gestionando
-    dependencias y entorno con \texttt{pyproject.toml}. Asegura que las instalaciones sean 
-    reproducibles y ofrece una resolución de dependencias rápida y fiable.
+    \item \textbf{Poetry}: Implementa nativamente los PEP 508 y 518, gestionando dependencias
+    y entorno con \texttt{pyproject.toml}. Asegura que las instalaciones sean reproducibles y
+    ofrece una resolución de dependencias rápida y fiable.
     \item \textbf{Flit:} Se centra en la distribución de paquetes y su distribución,
     usa \texttt{pyproject.toml} para definir dependencias y es muy rápido, pero no gestiona entornos 
     virtuales, ni todas las dependencias del proyecto.
     \item \textbf{Hatch:} También soporta \texttt{pyproject.toml} y ofrece gestión de entornos
-    y dependencias. Es flexible y potente, pero puede ser lenta en proyectos grandes. 
+    y dependencias. Es flexible y potente, aunque puede ser lenta en proyectos grandes. 
     \item \textbf{uv: } Herramienta escrita en \texttt{Rust}, mucho más rápida que las demás.
     Sin embargo, su adopción es aún limitada y su ecosistema es mucho más reducido que el de
     \texttt{Poetry}, lo que podría dificultar su integración.
     \item \textbf{PDM: } Se denomina como una mezcla entre \texttt{pip}, \texttt{poetry} y 
-    \texttt{virtualenv}, pero no es tan popular ni tiene tanta comunidad como \texttt{poetry}.
+    \texttt{virtualenv}, sin embargo, no es tan popular ni tiene tanta comunidad como \texttt{poetry}.
     Está basado en \texttt{\href{https://peps.python.org/pep-0582/}{PEP 582}}, que propone una alternativa a los entornos virtuales tradicionales,
-    usando el directorio \texttt{\_\_pypackages\_\_} en lugar de \texttt{venv}. Sin embargo,
+    utilizando el directorio \texttt{\_\_pypackages\_\_} en lugar de \texttt{venv}. Sin embargo,
     este PEP no está tan extendido ni es tan compatible con otras herramientas del ecosistema
     Python como los PEP 508 y 518.
 \end{itemize}
 
 \subsubsection{Herramienta seleccionada}
 Se ha seleccionado \textbf{Poetry} por ajustarse mejor a los estándares actuales de Python, ya
-que utiliza \texttt{pyproject.toml}, definido en el \textit{PEP 518}, de manera nativa para la
+que emplea \texttt{pyproject.toml}, definido en el \textit{PEP 518}, de manera nativa para la
 gestión de dependencias y soporta la especificación de versiones y extras según el \textit{PEP 508}.
 
 Además, Poetry garantiza la idempotencia y reproducibilidad del entorno, ofreciendo el mejor equilibrio
