Añade referencia y bibliografía #50

--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -261,3 +261,9 @@
   address   = {Madrid, España}
 }
 
+@book{beckTDD,
+  author    = {Kent Beck},
+  title     = {Test Driven Development: By Example},
+  year      = {2002},
+  publisher = {Addison-Wesley Professional}
+}
