Añade introducción al capítulo de implementación #3

--- a/doc/secciones/05_implementacion.tex
+++ b/doc/secciones/05_implementacion.tex
@@ -2,5 +2,13 @@
 
 La implementación del software se ha dividido en hitos. Estos han sido definidos en GitHub
 y cada uno de ellos contiene un grupo de \textit{issues} que se corresponden con las distintas
-mejoras que se han ido incorporando al software a lo largo de su desarrollo.\\
+mejoras que se han ido incorporando al software a lo largo de su desarrollo.
 
+Cada milestone representa un bloque de trabajo con un objetivo definido, lo que permite seguir
+un enfoque ágil, enfocado en construir progresivamente un prototipo sólido en lugar de intentar
+desarrollar todo el sistema de una vez. 
+
+\section{Milestone 1: Elección del lenguaje de programación}
+En este primer hito se decidió el lenguaje de programación a utilizar para el desarrollo del software,
+siendo Python la opción elegida. Esta elección se justificó y documentó debidamente en el
+\hyperref[sec:lenguaje-programacion]{anterior capítulo}.
