--- a/doc/secciones/04_analisis.tex
+++ b/doc/secciones/04_analisis.tex
@@ -36,7 +36,7 @@ En esta sección se detallan las herramientas y tecnologías que se han consider
 del software, así como los criterios que se han seguido para su selección. La selección de estas
 herramientas se ha basado en las secciones previas.
 
-\subsection{Lenguaje de programación}\label{sec:lenguaje-programacion}
+\subsection{Lenguaje de programación}\label{sec:lenguaje-programación}
 Antes de avanzar en el diseño del modelo de datos y la arquitectura del sistema, es necesario definir 
 el lenguaje de programación, ya que cada lenguaje ofrece estructuras, herramientas y recursos diferentes 
 para representar y manipular la información.
