--- a/doc/secciones/05_implementacion.tex
+++ b/doc/secciones/05_implementacion.tex
@@ -11,4 +11,4 @@ desarrollar todo el sistema de una vez.
 \section{Milestone 1: Elección del lenguaje de programación}
 En este primer hito se decidió el lenguaje de programación a utilizar para el desarrollo del software,
 siendo Python la opción elegida. Esta elección se justificó y documentó debidamente en el
-\hyperref[sec:lenguaje-programacion]{anterior capítulo}.
+\hyperref[sec:lenguaje-programación]{anterior capítulo}.
