--- a/doc/secciones/05_implementacion.tex
+++ b/doc/secciones/05_implementacion.tex
@@ -19,13 +19,13 @@ el desarrollo guiado por pruebas, y la definición del modelo del dominio siguie
 \textit{Domain-Driven Design} (DDD).
 
 \subsection{Configuración del entorno de desarrollo}
-En el capítulo anterior se seleccionaron las herramientas que se utilizarían para 
+En el capítulo anterior se seleccionaron las herramientas que se emplearían para 
 \hyperref[sec:gestor-dependencias]{gestionar las dependencias y el entorno} y 
 \hyperref[sec:herramienta-testeo]{realizar pruebas}. En este hito se procedió a su instalación y 
 configuración.
 
 \subsubsection{Poetry}
-Se ha utilizado \textit{Poetry} para gestionar las dependencias y el entorno virtual del proyecto.
+Se ha usado \textit{Poetry} para gestionar las dependencias y el entorno virtual del proyecto.
 La configuración del gestor de dependencias se ha realizado con el comando:
 
 \begin{lstlisting}[language=bash]
