--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -267,3 +267,10 @@
   year      = {2002},
   publisher = {Addison-Wesley Professional}
 }
+
+@book{evansDDD,
+  author    = {Eric Evans},
+  title     = {Domain-Driven Design: Tackling Complexity in the Heart of Software},
+  year      = {2003},
+  publisher = {Addison-Wesley Professional}
+}
