Añade referencia al lenguaje ubicuo

--- a/doc/secciones/05_implementacion.tex
+++ b/doc/secciones/05_implementacion.tex
@@ -55,10 +55,11 @@ propuesto por Eric Evans \cite{evansDDD}. Este método de diseño de software se
 el sistema refleje fielmente la realidad del dominio que se está modelando, evitando que los 
 aspectos técnicos o de implementación condicionen la representación del problema.
 
-Uno de los principios fundamentales de DDD es la creación de un \textit{lenguaje ubicuo}, que
-consiste en definir términos y conceptos específicos del dominio para que los conceptos empleados en
-el código coincidan con los del propio dominio. De este modo se facilita la comunicación entre el 
-análisis y la implementación. En este proyecto se ha definido el siguiente lenguaje ubicuo:
+Uno de los principios fundamentales de DDD es la creación de un \textit{lenguaje ubicuo}, introducido
+por Evans en el capítulo 2 de su obra \cite{evansDDD}. Esto consiste en definir términos y conceptos 
+específicos del dominio para que los conceptos empleados en el código coincidan con los del propio 
+dominio. De este modo se facilita la comunicación entre el análisis y la implementación. En este 
+proyecto se ha definido el siguiente lenguaje ubicuo:
 
 \begin{itemize}
     \item \textbf{Escudo}: Entendemos como escudo a la representación gráfica de un conjunto de
