Añade enlace lenguaje ubicuo

--- a/doc/secciones/05_implementacion.tex
+++ b/doc/secciones/05_implementacion.tex
@@ -58,8 +58,9 @@ aspectos técnicos o de implementación condicionen la representación del probl
 Uno de los principios fundamentales de DDD es la creación de un \textit{lenguaje ubicuo}, introducido
 por Evans en el capítulo 2 de su obra \cite{evansDDD}. Esto consiste en definir términos y conceptos 
 específicos del dominio para que los conceptos empleados en el código coincidan con los del propio 
-dominio. De este modo se facilita la comunicación entre el análisis y la implementación. En este 
-proyecto se ha definido el siguiente lenguaje ubicuo:
+dominio. De este modo se facilita la comunicación entre el análisis y la implementación. En este
+proyecto se ha definido el siguiente 
+\href{https://agilealliance.org/glossary/ubiquitous-language/?utm_source=chatgpt.com}{lenguaje ubicuo}:
 
 \begin{itemize}
     \item \textbf{Escudo}: Entendemos como escudo a la representación gráfica de un conjunto de
