Añade referencia a la fuente del lenguaje ubicuo

--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -274,3 +274,10 @@
   year      = {2003},
   publisher = {Addison-Wesley Professional}
 }
+
+@book{delgadoHeraldica,
+  title     = {Manual de heráldica: la ciencia del blasón},
+  author    = {Delgado y Ugarte, Josu Imanol and Martínez Larrañaga, Fernando},
+  publisher = {Editorial desconocida},
+  year      = {2019}
+}
