--- a/doc/secciones/05_implementacion.tex
+++ b/doc/secciones/05_implementacion.tex
@@ -78,6 +78,9 @@ proyecto se ha definido el siguiente lenguaje ubicuo:
     del escudo.
 \end{itemize}
 
+Las definiciones empleadas en este lenguaje ubicuo se han extraído del 
+\textit{Manual de heráldica: la ciencia del blasón} \cite{delgadoHeraldica}.
+
 A partir de este lenguaje ubicuo se identifican dos tipos de elementos: las \textit{entidades}, que
 tienen identidad propia, y los \textit{objetos de valor}, que se definen únicamente por sus atributos.
 Estas dos categorías de elementos constituyen el modelo del problema. En esta primera iteración del
