Añade imagen de las partes de un escudo

--- a/doc/secciones/05_implementacion.tex
+++ b/doc/secciones/05_implementacion.tex
@@ -78,6 +78,13 @@ proyecto se ha definido el siguiente lenguaje ubicuo:
     del escudo.
 \end{itemize}
 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=1\textwidth]{figuras/escudo-papa-francisco.png}
+    \caption{Partes del escudo de armas del papa Francisco \cite{wikiEscudo}.}
+    \label{fig:partes-escudo}
+\end{figure}
+
 Las definiciones empleadas en este lenguaje ubicuo se han extraído del 
 \textit{Manual de heráldica: la ciencia del blasón} \cite{delgadoHeraldica}.
 
