--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -281,3 +281,11 @@
   publisher = {Editorial desconocida},
   year      = {2019}
 }
+
+@misc{wikiEscudo,
+  author       = {{SajoR}},
+  title        = {Escudo de armas del papa Francisco},
+  year         = {2025},
+  url          = {https://es.wikipedia.org/wiki/Escudo_del_papa_Francisco#/media/Archivo:Coat_of_arms_of_Jorge_Mario_Bergoglio.svg},
+  note         = {Disponible en Wikipedia bajo licencia CC BY-SA 2.5},
+}
