Elimina entidades y objetos valor

--- a/doc/secciones/05_implementacion.tex
+++ b/doc/secciones/05_implementacion.tex
@@ -88,21 +88,12 @@ proyecto se ha definido el siguiente lenguaje ubicuo:
 Las definiciones empleadas en este lenguaje ubicuo se han extraído del 
 \textit{Manual de heráldica: la ciencia del blasón} \cite{delgadoHeraldica}.
 
-A partir de este lenguaje ubicuo se identifican dos tipos de elementos: las \textit{entidades}, que
-tienen identidad propia, y los \textit{objetos de valor}, que se definen únicamente por sus atributos.
-Estas dos categorías de elementos constituyen el modelo del problema. En esta primera iteración del
-proyecto se han identificado las siguientes entidades y objetos de valor:
-
-\begin{itemize}
-    \item \textbf{Escudo}: Representa la entidad principal del dominio, con su propia identidad.
-    \item \textbf{Campo}: Objeto de valor que define las características del campo del escudo.
-    \item \textbf{Esmalte}: Objeto de valor que define los colores y metales usados en el escudo.
-\end{itemize}
-
 En esta primera iteración se ha decidido limitar el modelo a una parte reducida del lenguaje ubicuo. 
-Se ha identificado como entidad principal el \textbf{Escudo} y se han definido como objetos de valor 
-iniciales el \textbf{Campo}, la \textbf{Boca} y el \textbf{Esmalte}. 
+Concretamente, se trabajará con el \textbf{Escudo} como composición de otros elementos, incorporando 
+inicialmente el \textbf{Campo} y el \textbf{Esmalte}, que constituyen la base mínima necesaria para 
+definir un prototipo funcional. 
 
-Otros elementos como el \textbf{Portador}, las \textbf{Particiones}, las \textbf{Piezas heráldicas}, 
-las \textbf{Figuras} o los \textbf{Adornos exteriores} se han recogido en el lenguaje ubicuo, pero se 
-abordarán en futuras iteraciones.
+Otros elementos como la \textbf{Boca}, el \textbf{Portador}, las \textbf{Particiones}, las 
+\textbf{Piezas heráldicas}, las \textbf{Figuras} o los \textbf{Adornos exteriores} se han recogido 
+en el lenguaje ubicuo, pero quedan fuera del alcance de esta iteración y se abordarán en futuras 
+extensiones del modelo.
