--- a/doc/secciones/05_implementacion.tex
+++ b/doc/secciones/05_implementacion.tex
@@ -140,7 +140,7 @@ la clasificación y el filtrado de escudos de \hyperref[sec:hu2]{HU2}.
 Para ello, es necesario implementar un catálogo mínimo de ejemplo para poder realizar la consulta.
 
 Los criterios de aceptación son sencillos: (1) dado un esmalte válido, la consulta devuelve 
-solo escudos con ese campo; (2) sin criterio, se devuelve el catálogo completo; y 
+únicamente escudos con ese campo; (2) sin criterio, se devuelve el catálogo completo; y 
 (3) con un criterio erróneo, la respuesta es una lista vacía.
 
 \subsection{Adición de un catálogo mínimo}
