--- a/doc/secciones/04_analisis.tex
+++ b/doc/secciones/04_analisis.tex
@@ -295,3 +295,41 @@ complementarias y no excluyentes.
 estrictamente necesarios, hay algunos que podrían resultar útiles, como \texttt{pytest-cov}, que hace
 de puente entre \texttt{pytest} y \texttt{\href{https://coverage.readthedocs.io/en/7.10.6/}{coverage.py}}
 (herramienta estándar), y permite medir la cobertura de código durante los test.
+
+\subsection{Verificación automática de buenas prácticas}
+El código no solamente debe funcionar, sino ser \textbf{legible}, \textbf{consistente} y \textbf{mantenible}.
+Aplicar buenas prácticas desde el inicio evita errores triviales y agiliza las revisiones. Para reforzarlo,
+este proyecto incorpora comprobación automática que se ejecuta en cada push o pull request (CI).
+
+\subsubsection{Linter}
+Un linter analiza el código para detectar errores frecuentes y problemas de estilo, ayudando a
+mantener un estilo coherente con las convenciones del lenguaje (PEP 8, entre otras).
+Se han considerado las siguientes opciones:
+
+\begin{itemize}
+  \item \textbf{Ruff}: muy rápido; reimplementa reglas habituales de \texttt{pyflakes}/\texttt{pycodestyle}
+  (errores comunes y estilo), ordena imports y aplica modernizaciones sencillas.
+  \item \textbf{Flake8}: opción clásica y estable. Flexible, pero suele requerir combinar
+  varios plugins, lo que aumenta configuración y tiempo de ejecución.
+  \item \textbf{Pylint}: análisis más exhaustivo (convenciones y algunos olores de diseño). Tiende a ser
+  más verboso y lento; puede generar más ruido en proyectos pequeños.
+\end{itemize}
+
+\subsubsection{Autoformatters}
+Un autoformatter reformatea automáticamente el código para aplicar un estilo uniforme
+(sangrías, saltos de línea, longitud de línea, comillas, paréntesis para dividir líneas, etc.).
+Estos formateadores se inspiran en PEP 8 y garantizan consistencia sin intervención manual.
+Opciones evaluadas:
+
+\begin{itemize}
+  \item \textbf{Ruff}: formateador integrado en la misma herramienta; muy rápido y con poca configuración.
+  \item \textbf{Black}: es la más usada por la comunidad; resultados muy estables y predecibles. Implica 
+  utilizar una herramienta adicional además del linter.
+  \item \textbf{autopep8 / yapf}: alternativas históricas hoy menos extendidas.
+\end{itemize}
+
+\subsubsection{Selección}
+Se selecciona \textbf{Ruff} como herramienta única para lint y formateo, debido a su ejecución rápida y su menor 
+complejidad operativa (es una sola herramienta).
+Se integra en CI con un workflow que se lanza en cada push o pull request y hace fallar la integración si hay 
+errores de estilo o de formato.
