Añade cita sobre el clean code

--- a/doc/bibliografia.bib
+++ b/doc/bibliografia.bib
@@ -289,3 +289,10 @@
   url          = {https://es.wikipedia.org/wiki/Escudo_del_papa_Francisco#/media/Archivo:Coat_of_arms_of_Jorge_Mario_Bergoglio.svg},
   note         = {Disponible en Wikipedia bajo licencia CC BY-SA 2.5},
 }
+
+@book{martinCleancode,
+  author    = {Robert C. Martin},
+  title     = {Clean Code: A Handbook of Agile Software Craftsmanship},
+  year      = {2008},
+  publisher = {Pearson}
+}
