--- a/doc/secciones/04_analisis.tex
+++ b/doc/secciones/04_analisis.tex
@@ -297,7 +297,8 @@ de puente entre \texttt{pytest} y \texttt{\href{https://coverage.readthedocs.io/
 (herramienta estándar), y permite medir la cobertura de código durante los test.
 
 \subsection{Verificación automática de buenas prácticas}
-El código no solamente debe funcionar, sino ser \textbf{legible}, \textbf{consistente} y \textbf{mantenible}.
+El código no solamente debe funcionar, sino ser \textbf{legible}, \textbf{consistente} y \textbf{mantenible},
+según los principios del llamado \emph{Clean Code}~\cite{martin2009cleancode}.
 Aplicar buenas prácticas desde el inicio evita errores triviales y agiliza las revisiones. Para reforzarlo,
 este proyecto incorpora comprobación automática que se ejecuta en cada push o pull request (CI).
 
