Añade enlace a PEP8

--- a/doc/secciones/04_analisis.tex
+++ b/doc/secciones/04_analisis.tex
@@ -304,8 +304,8 @@ este proyecto incorpora comprobación automática que se ejecuta en cada push o 
 
 \subsubsection{Linter}
 Un linter analiza el código para detectar errores frecuentes y problemas de estilo, ayudando a
-mantener un estilo coherente con las convenciones del lenguaje (PEP 8, entre otras).
-Se han considerado las siguientes opciones:
+mantener un estilo coherente con las convenciones del lenguaje (\href{https://peps.python.org/pep-0008/}{PEP 8},
+entre otras). Se han considerado las siguientes opciones:
 
 \begin{itemize}
   \item \textbf{Ruff}: muy rápido; reimplementa reglas habituales de \texttt{pyflakes}/\texttt{pycodestyle}
